--- a/DatabaseDesignReport/help_ddr/help_n.html
+++ b/DatabaseDesignReport/help_ddr/help_n.html
@@ -11,7 +11,7 @@
 <br>
 <br>
 			<a href="
-		./../Help.html" target="_top">Back to Overview
+		./../DatabaseDesignReport.html" target="_top">Back to Overview
 			</a>
 		</span>
 </p>
